# aster

./: .gitignore  ADV.md  AGENTS.md  BENCH.md  Cargo.toml  HILLCLIMB.md  INIT.md  LICENSE  NEXT.md  README.md  aster.toml
.github/workflows/: ci.yml
asm/compiler/: README.md  asterc0.S  asterc1.S  asterc1_core.c  diagnostics.S  fswalk_rt.c  lexer.S  ml_metal_rt.m  net_tls_rt.c  parser.S  span.S  stencil_rt.c
asm/driver/: README.md  asterc.S
asm/macros/: README.md  abi_arm64.inc  abi_x86_64.inc  arena.inc  base.inc  diagnostics.inc  hash.inc  lexer.inc  span.inc  string.inc  vec.inc
asm/runtime/: README.md  arena.S  hash.S  string.S  vec.S
asm/tests/: README.md  diag_render.S  diag_sanity.S  hello.S  lexer_char.S  lexer_indent.S  lexer_nums.S  lexer_sanity.S  parser_expr.S  parser_sanity.S  rt_sanity.S  run.sh  span_sanity.S
aster/apps/: README.md
aster/bench/: README.md
aster/stdlib/: README.md
aster/tests/: README.md  run.sh
crates/aster/: Cargo.toml
crates/aster_ast/: Cargo.toml
crates/aster_codegen/: Cargo.toml
crates/aster_diagnostics/: Cargo.toml
crates/aster_frontend/: Cargo.toml
crates/aster_hir/: Cargo.toml
crates/aster_mir/: Cargo.toml
crates/aster_runtime/: Cargo.toml
crates/aster_span/: Cargo.toml
crates/aster_typeck/: Cargo.toml
crates/asterc/: Cargo.toml
crates/asterfmt/: Cargo.toml
crates/asterlsp/: Cargo.toml
docs/: perf.md
docs/dev/: README.md  asm.md  bench.md  compiler.md  examples.md  (+3 more)
libraries/: README.md
plan/: report-2026-02-06-aster-leetcode-hard-suite.md  report-2026-02-06-tinygrad-aster-port.md
(+187 files in other folders)
