[workspace]
resolver = "2"
members = [
    "crates/aster",
    "crates/asterc",
    "crates/aster_frontend",
    "crates/aster_ast",
    "crates/aster_hir",
    "crates/aster_mir",
    "crates/aster_typeck",
    "crates/aster_codegen",
    "crates/aster_runtime",
    "crates/aster_diagnostics",
    "crates/aster_span",
    "crates/asterfmt",
    "crates/asterlsp",
]
